--- a/Project_d/.env
+++ b/Project_d/.env
@@ -3,6 +3,6 @@ SESSION_SECRET=
 
 
 
-EMAIL_USER=automarket.serv@gmail.com
+EMAIL_USER=automarket.serv@outlook.com
 EMAIL_PASS=olakarlita1
-EMAIL_FROM=automarket.serv@gmail.com
+EMAIL_FROM=automarket.serv@outlook.com
