--- a/Project_d/app/.env
+++ b/Project_d/app/.env
@@ -2,6 +2,6 @@ SECRET_KEY=HolaKarlita
 SESSION_SECRET= 
 
 
-EMAIL_USER=automarket.serv@outlook.com
+EMAIL_USER=automarket.serv1@outlook.com
 EMAIL_PASS=olakarlita1
-EMAIL_FROM=automarket.serv@outlook.com
+EMAIL_FROM=automarket.serv1@outlook.com
